Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
@@ -467,12 +467,12 @@ msgstr "`users` という永続化ユニットを定義します。"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:223
 msgid "Define the datasource used by the persistence unit."
-msgstr ""
+msgstr "永続性ユニットが使用するデータソースを定義します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:224
 msgid "This configuration property is important but we will discuss it a bit later."
-msgstr ""
+msgstr "この設定プロパティーは重要ですが、後ほど少し説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:225
@@ -586,7 +586,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:289
 msgid "Panache entities can be attached to only one persistence unit."
-msgstr ""
+msgstr "Panacheエンティティーは、1つの永続化ユニットにのみアタッチできます。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:292
@@ -659,7 +659,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:330
 msgid "This will inject the `EntityManager` of the default persistence unit."
-msgstr ""
+msgstr "これは、デフォルトの永続化ユニットの `EntityManager` を注入します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:332
@@ -1221,17 +1221,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:632
 #, no-wrap
 msgid "Hibernate Envers"
-msgstr ""
+msgstr "Hibernate Envers"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:634
 msgid "The Envers extension to Hibernate ORM aims to provide an easy auditing / versioning solution for entity classes."
-msgstr ""
+msgstr "Hibernate ORMのEnversエクステンションは、エンティティークラスのための簡単な監査/バージョン管理ソリューションを提供することを目的としています。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:636
 msgid "In Quarkus, Envers has a dedicated Quarkus Extension `io.quarkus:quarkus-hibernate-envers`; you just need to add this to your project to start using it."
-msgstr ""
+msgstr "Quarkusでは、Enversには専用のQuarkus Extensionがあります。 `io.quarkus:quarkus-hibernate-envers` ; これをプロジェクトに追加して使用を開始する必要があります。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:638
@@ -1888,7 +1888,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:995
 #, no-wrap
 msgid "Programmatically Resolving Tenants Connections"
-msgstr ""
+msgstr "テナント接続をプログラムで解決"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:997
