--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -554,7 +554,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:284
 msgid "Nothing out of the ordinary here: it is just good old Hibernate ORM with Panache operations in a standard JAX-RS service."
-msgstr ""
+msgstr "ここでは何も特別なことはありません。標準的なJAX-RSサービスでPanache操作を行う古き良きHibernate ORMです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:286
@@ -570,12 +570,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:290
 msgid "Let's go back to our entities."
-msgstr ""
+msgstr "エンティティに戻りましょう"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:292
 msgid "Enabling full text search capabilities for them is as simple as adding a few annotations."
-msgstr ""
+msgstr "フルテキスト検索機能を有効にするには、いくつかのアノテーションを追加するだけで簡単です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:294
