--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-sns.adoc.po
@@ -214,8 +214,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:103
+#, fuzzy
 msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Mutiny and Amazon SNS Client extensions.  After this, the `amazon-sns` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy."
-msgstr ""
+msgstr "このコマンドは、RESTEasy/JAX-RS、Mutiny、Amazon SES ClientエクステンションをインポートするMavenディレクトリ構造を生成します。 この後、RESTEasyのMutinyサポートと同様に、 `amazon-ses` エクステンションが `pom.xml` に追加されています。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:104
@@ -1163,8 +1164,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:630
+#, fuzzy
 msgid "`quarkus.sns.aws.credentials.type` - Set `static` credentials provider with any values for `access-key-id` and `secret-access-key`"
-msgstr ""
+msgstr "`quarkus.ses.aws.credentials.type` - `static` の資格情報プロバイダを `access-key-id` と `secret-access-key` について任意の値で設定します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:631
