--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
@@ -865,17 +865,17 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:459
 #, no-wrap
 msgid "Hibernate Envers"
-msgstr ""
+msgstr "Hibernate Envers"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:461
 msgid "The Envers extension to Hibernate ORM aims to provide an easy auditing / versioning solution for entity classes."
-msgstr ""
+msgstr "Hibernate ORMのEnversエクステンションは、エンティティークラスのための簡単な監査/バージョン管理ソリューションを提供することを目的としています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:463
 msgid "In Quarkus, Envers has a dedicated Quarkus Extension `io.quarkus:quarkus-hibernate-envers`; you just need to add this to your project to start using it."
-msgstr ""
+msgstr "Quarkusでは、Enversには専用のQuarkus Extensionがあります。 `io.quarkus:quarkus-hibernate-envers` ; これをプロジェクトに追加して使用を開始する必要があります。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:465
@@ -1470,7 +1470,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:776
 #, no-wrap
 msgid "Programmatically Resolving Tenants Connections"
-msgstr ""
+msgstr "テナント接続をプログラムで解決"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:778
