--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-ses.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-ses.adoc.po
@@ -101,7 +101,7 @@ msgstr "ローカルでSESをセットアップ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:40
 msgid "The easiest way to start working with SES is to run a local instance as a container.  However, local instance of SES is only mocks the SES APIs without the actual email sending capabilities. You can still use it for this guide to verify an API communication or integration test purposes."
-msgstr ""
+msgstr "SESを使い始める最も簡単な方法は、コンテナーとしてローカルインスタンスを実行することです。しかし、SESのローカルインスタンスは、実際のメール送信機能を持たずにSESのAPIをモックしているに過ぎません。それでも、このガイドではAPI通信の検証や統合テストの目的で使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:44
@@ -207,7 +207,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:90
 msgid "The application built here allows sending text emails to the recipients that are verified on AWS SES."
-msgstr ""
+msgstr "ここで構築したアプリケーションでは、AWS SES上で確認された受信者にテキストメールを送信することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:93
@@ -222,7 +222,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:97
 msgid "The solution is located in the `amazon-ses-quickstart` {quickstarts-tree-url}/amazon-ses-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `amazon-ses-quickstart` {quickstarts-tree-url}/amazon-ses-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:98
@@ -251,7 +251,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:115
 msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Mutiny and Amazon SES Client extensions.  After this, the `amazon-ses` extension has been added to your `pom.xml` as well as the Mutiny support for RESTEasy."
-msgstr ""
+msgstr "このコマンドは、RESTEasy/JAX-RS、Mutiny、Amazon SES ClientエクステンションをインポートするMavenディレクトリ構造を生成します。 この後、RESTEasyのMutinyサポートと同様に、 `amazon-ses` エクステンションが `pom.xml` に追加されています。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:116
@@ -262,7 +262,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:119
 msgid "Lets create a `org.acme.ses.QuarkusSesSyncResource` that will provide an API to send emails using the synchronous client."
-msgstr ""
+msgstr "同期クライアントを使用して電子メールを送信するためのAPIを提供する `org.acme.ses.QuarkusSesSyncResource` を作成しましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:123
@@ -329,7 +329,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:159
 msgid "Both SES clients (sync and async) are configurable via the `application.properties` file that can be provided in the `src/main/resources` directory.  Additionally, you need to add to the classpath a proper implementation of the sync client. By default the extension uses the URL connection HTTP client, so you need to add a URL connection client dependency to the `pom.xml` file:"
-msgstr ""
+msgstr "SES クライアント (sync と async) は、 `src/main/resources` ディレクトリーにある `application.properties` ファイルを介して設定可能です。さらに、同期クライアントの適切な実装をクラスパスに追加する必要があります。デフォルトでは、エクステンションは URL connection HTTP クライアントを使用するので、URL connection クライアントの依存関係を `pom.xml` ファイルに追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:166
@@ -391,12 +391,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:196
 msgid "`quarkus.ses.aws.region` - It's required by the client, but since you're using a local SES instance use `us-east-1` as it's a default region of localstack's SES."
-msgstr ""
+msgstr "`quarkus.ses.aws.region` - クライアントによって必要とされますが、ローカルのSESインスタンスを使用しているので、ローカルスタックのSESのデフォルトリージョンである `us-east-1` を使用してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:197
 msgid "`quarkus.ses.aws.credentials.type` - Set `static` credentials provider with any values for `access-key-id` and `secret-access-key`"
-msgstr ""
+msgstr "`quarkus.ses.aws.credentials.type` - `static` の資格情報プロバイダを `access-key-id` と `secret-access-key` について任意の値で設定します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:198
@@ -406,7 +406,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:201
 msgid "If you want to work with an AWS account, you can simply remove or comment out all Amazon SES related properties. By default, the SES client extension will use the `default` credentials provider chain that looks for credentials in this order:"
-msgstr ""
+msgstr "AWSアカウントで作業したい場合は、Amazon SES関連のプロパティーをすべて削除するかコメントアウトするだけです。デフォルトでは、SESクライアントエクステンションは、次の順番でクレデンシャルを探す `default` クレデンシャルプロバイダチェーンを使用します:"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-ses.adoc:205
