--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-search-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-search-elasticsearch.adoc.po
@@ -566,7 +566,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:298
 msgid "Nothing out of the ordinary here: it is just good old Hibernate ORM with Panache operations in a standard JAX-RS service."
-msgstr ""
+msgstr "ここでは何も特別なことはありません。標準的なJAX-RSサービスでPanache操作を行う古き良きHibernate ORMです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:300
@@ -582,12 +582,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:304
 msgid "Let's go back to our entities."
-msgstr ""
+msgstr "エンティティに戻りましょう"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:306
 msgid "Enabling full text search capabilities for them is as simple as adding a few annotations."
-msgstr ""
+msgstr "フルテキスト検索機能を有効にするには、いくつかのアノテーションを追加するだけで簡単です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:308
