Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
@@ -201,7 +201,7 @@ msgstr "セクション"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:108
 msgid "A <<sections,section>> may contain text, expressions and nested sections: `{#if foo}{foo.name}{/if}`.  The name in the closing tag is optional: `{#if active}ACTIVE!{/}`.  It can be empty: `{#myTag image=true /}`.  A section may declare nested section blocks: `{#if item.valid} Valid. {#else} Invalid. {/if}` and decide which block to render."
-msgstr ""
+msgstr "1 つの link:#sections[セ ク シ ョン] はテキス ト ・ 式 ・ 入れ子に し たセ ク シ ョ ン を含む こ と がで き ます : `{#if foo}{foo.name}{/if}` .クロージングタグの名前はオプションです: `{#if active}ACTIVE!{/}` .空にすることもできます: `{#myTag image=true /}` .セクションは、入れ子になったセクションブロックを宣言することができます: `{#if item.valid} Valid. {#else} Invalid. {/if}` そして、どのブロックをレンダリングするかを決定します。"
 
 #. type: Title ====
 #: upstream/_versions/1.11/guides/qute-reference.adoc:109
@@ -734,7 +734,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:354
 #, no-wrap
 msgid "Outputs the default value if the previous part cannot be resolved or resolves to `null`."
-msgstr ""
+msgstr "前の部分が解決できなかったり、 `null` に解決された場合のデフォルト値を出力します。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:356
@@ -752,7 +752,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:358
 #, no-wrap
 msgid "Shorthand for if-then-else statement. Unlike in <<if_section>> nested operators are not supported."
-msgstr ""
+msgstr "if-then-else文の省略形。 link:#if_section[if_section]] とは異なり、入れ子になった演算子はサポートされていません。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:360
@@ -794,7 +794,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:366
 #, no-wrap
 msgid "`{person.isActive \\"
-msgstr ""
+msgstr "`{person.isActive \\"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:366
@@ -823,12 +823,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:373
 #, no-wrap
 msgid "Character Escapes"
-msgstr ""
+msgstr "文字エスケープ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:376
 msgid "For HTML and XML templates the `'`, `\"`, `<`, `>`, `&` characters are escaped by default if a template variant is set."
-msgstr ""
+msgstr "HTML と XML テンプレートの場合、 `'` , `\"` , `<` , `>` , `&` の文字は、テンプレートバリアントが設定されている場合はデフォルトでエスケープされます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:378
@@ -838,7 +838,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:380
 msgid "If you need to render the unescaped value:"
-msgstr ""
+msgstr "エスケープされていない値をレンダリングする必要がある場合:"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:382
@@ -848,7 +848,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:383
 msgid "Wrap the `String` value in a `io.quarkus.qute.RawString`."
-msgstr ""
+msgstr "`String` の値を `io.quarkus.qute.RawString` でラップします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:390
@@ -885,7 +885,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:401
 #, no-wrap
 msgid "Virtual Method Example"
-msgstr ""
+msgstr "仮想メソッドの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:407
@@ -1935,7 +1935,7 @@ msgstr "エンジン設定"
 #: upstream/_versions/1.11/guides/qute-reference.adoc:919
 #, no-wrap
 msgid "Template Locator"
-msgstr ""
+msgstr "テンプレートロケーター"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:923
@@ -2411,7 +2411,7 @@ msgstr "テンプレート拡張メソッド"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1157
 msgid "Extension methods can be used to extend the data classes with new functionality (to extend the set of accessible properties and methods) or to resolve expressions for a specific <<namespace_extension_methods,namespace>>.  For example, it is possible to add _computed properties_ and _virtual methods_."
-msgstr ""
+msgstr "拡張メソッドは、データクラスを新しい機能で拡張するため(アクセス可能なプロパティーとメソッドのセットを拡張するため)、または特定の link:#namespace_extension_methods[名前空間] のための式を解決するために使用することができます。例えば、 _計算されたプロパティー_ や _仮想メソッド_ を追加することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1162
@@ -2421,7 +2421,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1164
 msgid "A template extension method:"
-msgstr ""
+msgstr "テンプレート拡張メソッド:"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1166
@@ -2678,7 +2678,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1281
 msgid "`{#for key in map.keySet}`"
-msgstr ""
+msgstr "`{#for key in map.keySet}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1283
@@ -2688,7 +2688,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1284
 msgid "`{#for value in map.values}`"
-msgstr ""
+msgstr "`{#for value in map.values}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1286
@@ -2698,7 +2698,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1287
 msgid "`{map.size}`"
-msgstr ""
+msgstr "`{map.size}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1289
@@ -2708,7 +2708,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1290
 msgid "`{#if map.isEmpty}`"
-msgstr ""
+msgstr "`{#if map.isEmpty}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1292
@@ -2718,7 +2718,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1293
 msgid "`{map.get('foo')}`"
-msgstr ""
+msgstr "`{map.get('foo')}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1295
@@ -2729,7 +2729,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1296
 #, no-wrap
 msgid "Collections"
-msgstr ""
+msgstr "Collections"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1299
@@ -2739,7 +2739,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1300
 msgid "`{list.get(0)}`"
-msgstr ""
+msgstr "`{list.get(0)}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1302
@@ -2792,7 +2792,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1316
 #, no-wrap
 msgid "Time"
-msgstr ""
+msgstr "時間"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1319
@@ -2802,7 +2802,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1320
 msgid "`{dateTime.format('d MMM uuuu')}`"
-msgstr ""
+msgstr "`{dateTime.format('d MMM uuuu')}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1322
@@ -2812,7 +2812,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1323
 msgid "`{dateTime.format('d MMM uuuu',myLocale)}`"
-msgstr ""
+msgstr "`{dateTime.format('d MMM uuuu',myLocale)}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1325
@@ -2822,7 +2822,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1326
 msgid "`{dateTime.format('d MMM uuuu',myLocale,myTimeZoneId)}`"
-msgstr ""
+msgstr "`{dateTime.format('d MMM uuuu',myLocale,myTimeZoneId)}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1328
@@ -2832,7 +2832,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1329
 msgid "`{time:format(myDate,'d MMM uuuu')}`"
-msgstr ""
+msgstr "`{time:format(myDate,'d MMM uuuu')}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1331
@@ -2842,7 +2842,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1332
 msgid "`{time:format(myDate,'d MMM uuuu', myLocale)}`"
-msgstr ""
+msgstr "`{time:format(myDate,'d MMM uuuu', myLocale)}`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1334
@@ -2852,7 +2852,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1335
 msgid "`{time:format(myDate,'d MMM uuuu',myTimeZoneId)}`"
-msgstr ""
+msgstr "`{time:format(myDate,'d MMM uuuu',myTimeZoneId)}`"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1337
