--- a/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
@@ -479,7 +479,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:353
 #, no-wrap
 msgid "Virtual Method Example"
-msgstr ""
+msgstr "仮想メソッドの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:212
@@ -737,7 +737,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:317
 #, no-wrap
 msgid "Outputs the default value if the previous part cannot be resolved or resolves to `null`."
-msgstr ""
+msgstr "前の部分が解決できなかったり、 `null` に解決された場合のデフォルト値を出力します。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:319
@@ -755,7 +755,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:321
 #, no-wrap
 msgid "Shorthand for if-then-else statement. Unlike in <<if_section>> nested operators are not supported."
-msgstr ""
+msgstr "if-then-else文の省略形。 link:#if_section[if_section]] とは異なり、入れ子になった演算子はサポートされていません。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/qute-reference.adoc:322
@@ -777,7 +777,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:328
 #, no-wrap
 msgid "Character Escapes"
-msgstr ""
+msgstr "文字エスケープ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:332
@@ -792,7 +792,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:335
 msgid "Wrap the `String` value in a `io.quarkus.qute.RawString`."
-msgstr ""
+msgstr "`String` の値を `io.quarkus.qute.RawString` でラップします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:342
@@ -1556,7 +1556,7 @@ msgstr "エンジン設定"
 #: upstream/_versions/1.7/guides/qute-reference.adoc:711
 #, no-wrap
 msgid "Template Locator"
-msgstr ""
+msgstr "テンプレートロケーター"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:715
@@ -1833,7 +1833,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:856
 msgid "A template extension method:"
-msgstr ""
+msgstr "テンプレート拡張メソッド:"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:858
@@ -2090,7 +2090,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:973
 msgid "`{#for key in map.keySet}`"
-msgstr ""
+msgstr "`{#for key in map.keySet}`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:975
@@ -2100,7 +2100,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:976
 msgid "`{#for value in map.values}`"
-msgstr ""
+msgstr "`{#for value in map.values}`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:978
@@ -2110,7 +2110,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:979
 msgid "`{map.size}`"
-msgstr ""
+msgstr "`{map.size}`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:981
@@ -2120,7 +2120,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:982
 msgid "`{#if map.isEmpty}`"
-msgstr ""
+msgstr "`{#if map.isEmpty}`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:984
@@ -2130,7 +2130,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:985
 msgid "`{map.get('foo')}`"
-msgstr ""
+msgstr "`{map.get('foo')}`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:987
@@ -2141,7 +2141,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:988
 #, no-wrap
 msgid "Collections"
-msgstr ""
+msgstr "Collections"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:991
@@ -2151,7 +2151,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:992
 msgid "`{list.get(0)}`"
-msgstr ""
+msgstr "`{list.get(0)}`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:994
